Cryptocamel: Fixed blurry parallax on mobile

--- a/Cryptocamel/styles.css
+++ b/Cryptocamel/styles.css
@@ -83,7 +83,7 @@ h3:hover {
 /* White: #ffffff */
 .parallax {
     background-attachment: fixed;
-    background-position: center;
+    background-position: scroll;
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
